<resources>
    <string name="app_name">Storiee</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="app_desc">Storiee is a place for you to find amazing stories</string>
    <string name="register_desc">Become a storiee member</string>
    <string name="login_desc">Welcome back to storiee</string>
    <string name="sender_name">Shanks</string>
    <string name="story_by">Story By</string>
    <string name="log_out">Log Out</string>
    <string name="create_story">Create Story</string>
    <string name="story_desc">Story Desc from</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="story_image">Story Image</string>
    <string name="password_requirement">Password must contain at least 8 characters</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="open_maps">Open Maps</string>
    <string name="add_location">Add Location</string>
</resources>