<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_welcome_scene"
    tools:context=".view.welcome.WelcomeActivity">

    <TextView
        android:id="@+id/title_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39999998" />

    <TextView
        android:id="@+id/desc_TV"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/app_desc"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/title_TV"
        app:layout_constraintStart_toStartOf="@+id/title_TV"
        app:layout_constraintTop_toBottomOf="@+id/title_TV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_Btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/desc_TV"
        app:layout_constraintStart_toStartOf="@+id/desc_TV"
        app:layout_constraintTop_toBottomOf="@+id/desc_TV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_Btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button_outline"
        android:text="@string/register"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/login_Btn"
        app:layout_constraintStart_toStartOf="@+id/login_Btn"
        app:layout_constraintTop_toBottomOf="@+id/login_Btn" />

</androidx.constraintlayout.motion.widget.MotionLayout>