<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.upload.UploadActivity">

    <ImageView
        android:id="@+id/image_preview_IV"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/custom_button"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/camera_Btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:text="@string/take_photo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/image_preview_IV"
        app:layout_constraintStart_toStartOf="@+id/image_preview_IV"
        app:layout_constraintTop_toBottomOf="@+id/image_preview_IV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gallery_Btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button_outline"
        android:text="@string/choose_from_gallery"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/camera_Btn"
        app:layout_constraintStart_toStartOf="@+id/camera_Btn"
        app:layout_constraintTop_toBottomOf="@+id/camera_Btn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_description_cons"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:boxStrokeColor="@color/primary"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/baseline_error_24"
        app:hintTextColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gallery_Btn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="6"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            android:scrollHorizontally="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/upload_Btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/upload"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/ed_description_cons"
        app:layout_constraintStart_toStartOf="@+id/ed_description_cons"
        app:layout_constraintTop_toBottomOf="@+id/ed_description_cons" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>